fix tests; feat: add utils